[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/GroundTrack_ctrl.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SpinBox.tscn" type="PackedScene" id=3]

[node name="Tracking" type="VBoxContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1272.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 19.0
text = "Lat.:"

[node name="Lat_in" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 31.0
margin_right = 105.0
min_value = -90.0
max_value = 90.0
step = 0.01

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 109.0
margin_top = 5.0
margin_right = 139.0
margin_bottom = 19.0
text = "Lng.:"

[node name="Lng_in" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 143.0
margin_right = 217.0
max_value = 360.0
step = 0.01

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 221.0
margin_right = 283.0
margin_bottom = 24.0
text = "Analyze"

[connection signal="value_changed" from="HBoxContainer/Lat_in" to="." method="_on_Lat_in_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Lng_in" to="." method="_on_Lng_in_value_changed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
